# gumol-rs

./: .gitignore  Cargo.toml  README.md  build.rs  trajectory_simple.xyz
docs/: COMPLETION_REPORT.md  FINAL_SUMMARY.md  PROJECT_README.md  SIGFPE_FIX.md  SUMMARY.md  activity.md
examples/: argon_cpu.rs  argon_cpu_sim.rs  argon_gpu.rs  minimal_test.rs  test_100.rs  test_1000.rs  test_500.rs  test_chemfiles_direct.rs  test_controls.rs  test_controls2.rs  test_debug_small.rs  test_energy.rs  test_gpu_forces.rs  test_integrator.rs  test_output_only.rs  test_sigfpe.rs  test_sim_no_output.rs  test_simple_xyz.rs  test_trajectory_no_vel.rs  test_velocity_init.rs
gumol-core/: Cargo.toml
gumol-core/src/: units.rs
gumol-core/src/energy/: computations.rs  functions.rs  mod.rs  pairs.rs  restrictions.rs
gumol-core/src/energy/global/: ewald.rs  mod.rs  wolf.rs
gumol-core/src/sys/: chfl.rs  compute.rs  force_provider.rs  mod.rs  neighbor.rs  system.rs
gumol-core/src/sys/config/: cells.rs  composition.rs  mass.rs
gumol-core/src/types/: arrays.rs  complex.rs  matrix.rs  vectors.rs
gumol-gpu/: Cargo.toml
gumol-gpu/src/: dispatcher.rs  kernels.rs  lib.rs  memory.rs  profile.rs
gumol-input/: Cargo.toml
gumol-input/src/: alternator.rs  error.rs
gumol-input/src/interactions/: angles.rs  coulomb.rs  mod.rs  pairs.rs  potentials.rs
gumol-input/src/simulations/: mc.rs  md.rs  min.rs  mod.rs  outputs.rs  propagator.rs  simulations.rs  system.rs
gumol-input/tests/: input.rs
gumol-sim/: Cargo.toml
gumol-sim/src/: propagator.rs  simulations.rs  velocities.rs
gumol-sim/src/mc/: monte_carlo.rs
gumol-sim/src/mc/moves/: mod.rs  resize.rs  rotate.rs  translate.rs
gumol-sim/src/md/: controls.rs  integrators.rs  molecular_dynamics.rs  thermostats.rs
gumol-sim/src/min/: minimization.rs  steepest_descent.rs
gumol-sim/src/output/: cell.rs  custom.rs  energy.rs  forces.rs  mod.rs  properties.rs  simple_xyz.rs  stress.rs  tests.rs  trajectory.rs
gumol-sim/tests/: thermostats.rs
src/: input.rs  lib.rs  main.rs  sim.rs
tasks/: todo.md
tutorials/potential/: Cargo.toml
